Added Few Scenarious

--- a/Python_Training/Python_Operators.ipynb
+++ b/Python_Training/Python_Operators.ipynb
@@ -2,22 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Printing the addition value :\n",
-      "7\n",
-      "Printing the subtraction value :\n",
-      "1\n",
-      "Printing the Multiplication value :\n",
-      "18\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Arithmetic Operators\n",
     "\n",
@@ -47,22 +34,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Printing the Power :\n",
-      "27\n",
-      "Printing the Single / Division : \n",
-      "5.0\n",
-      "Printing the double slash // Division :\n",
-      "5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Power off \n",
     "\n",
@@ -83,34 +57,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Printing the % Modular division :\n",
-      "0\n"
-     ]
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "## Logical Operator \n",
+    "\n",
+    "\n",
+    "## and \n",
+    "## or \n",
+    "## not"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.3333333333333335\n",
-      "3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Difference between / and // \n",
     "\n",
@@ -121,22 +84,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10.0\n",
-      "25.0\n",
-      "0.0\n",
-      "5.0\n",
-      "3.3333333333333335\n",
-      "1000.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "##  Domination of the floating \n",
     "\n",
@@ -150,17 +100,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 10 \n",
     "y = 2.5 \n",
@@ -170,37 +112,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.2"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "5 ** -1  ## 1 / 5 = 0.2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.23606797749979\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     " ## Finding the Square root \n",
     "\n",
@@ -209,20 +132,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "## // With Negative value\n",
     "\n",
@@ -231,38 +143,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-4"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "-10 // 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Printing the % Modular division :\n",
-      "0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Modular -- Returns the Remainder value as the output \n",
     "\n",
@@ -272,17 +164,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "## Domination of Floating\n",
@@ -291,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,18 +191,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(-27 % 4)\n",
     "print(-9 % 2)\n",
@@ -328,17 +203,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Precedence of the Operator \n",
     "\n",
@@ -347,45 +214,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(5 ** 0) ## Anything to the Power 0 is 1 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "\n",
-      "False\n",
-      "False\n",
-      "False\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Boolean \n",
     "\n",
@@ -409,17 +249,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Assignment Operator \n",
     "\n",
@@ -433,17 +265,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "12\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = a+2\n",
     "print(a)"
@@ -451,17 +275,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "14\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## We can even write as \n",
     "\n",
@@ -471,17 +287,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a -= 2\n",
     "print(a)"
@@ -489,17 +297,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "20\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a *= 2\n",
     "print(a)"
@@ -507,17 +307,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a /= 2\n",
     "print(a)"
@@ -525,17 +317,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a //= 2\n",
     "print(a)"
@@ -559,17 +343,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = 10\n",
     "b = 20 \n",
@@ -595,18 +371,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "False\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Placement Qualification \n",
     "\n",
@@ -619,9 +386,112 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(True == 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 4\n",
+    "b = 11\n",
+    "print(a | b)\n",
+    "print(a >> 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# 1. What is the output of the following code\n",
+    "\n",
+    "# x = 100\n",
+    "# y = 50\n",
+    "# print(x and y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2. What is the value of the following Python Expression\n",
+    "\n",
+    "# print(36 / 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3. What is the output of print(2 ** 3 ** 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  What is the output of the following code\n",
+    "\n",
+    "# print(bool(0), bool(3.14159), bool(-3), bool(1.0+1j)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "|Precedence level|\tOperator|\tMeaning|\n",
+    "|----------------|----------|-----------|\n",
+    "|1 (Highest)|\t()|\tParenthesis|\n",
+    "|2|\t**|\tExponent|\n",
+    "|3|\t+x, -x ,~x\t|Unary plus, Unary Minus, Bitwise negation|\n",
+    "|4|\t*, /, //, %|\tMultiplication, Division, Floor division, Modulus|\n",
+    "|5|\t+, -\t|Addition, Subtraction|\n",
+    "|6|\t<<, >>\t|Bitwise shift operator|\n",
+    "|7|\t&\t|Bitwise AND|\n",
+    "|8|\t^\t|Bitwise XOR|\n",
+    "|9|\t|\t|Bitwise OR|\n",
+    "|10|\t==, !=, >, >=, <, <=\t|Comparison|\n",
+    "|11|\tis, is not, in, not in\t|Identity, Membership|\n",
+    "|12|\tnot\t|Logical NOT|\n",
+    "|13|\tand\t|Logical AND|\n",
+    "|14| (Lowest)\tor\t|Logical OR|"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
